# vscode-py-setup

./: README.md  app.py  pyproject.toml
app/: __main__.py
