[tool.poetry]
name = "vscode-py-setup"
version = "0.1.0"
description = "vscode python dev environment setup"
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.790"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
